<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentCharacterSelect">

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintWidth_percent=".48"
        android:layout_marginEnd="20dp"
        app:layout_constrainedWidth="true"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@id/select_sel_char_tv"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/select_sel_char_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:text="@string/placeholder_select"
        android:textAlignment="textEnd"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintWidth_percent=".48"
        app:layout_constrainedWidth="true"
        android:background="@android:color/darker_gray"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/select_sel_char_tv"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/user_name_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/placeholder_name"
        android:textSize="35sp"
        tools:visibility="visible"
        android:textAlignment="viewEnd"
        app:layout_constraintTop_toBottomOf="@id/select_sel_char_tv"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/clan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="4dp"
        android:text="@string/placeholder_clan_constant"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/user_name_value"
        app:layout_constraintEnd_toStartOf="@id/clan_name_value"/>

    <TextView
        android:id="@+id/clan_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/placeholder_clan"
        app:layout_constraintTop_toBottomOf="@id/user_name_value"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/menu_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fadingEdge="vertical"
        android:layout_marginStart="50dp"
        android:paddingTop="40dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toBottomOf="@+id/clan_name"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>