<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/class_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/characterback"/>

    <TextView
        android:id="@+id/select_character"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/character_picker_title"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_margin="15dp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/select_character_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="25dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_character">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/character_select_yes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/character_picker_button_ok"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/character_select_no"
        app:layout_constraintTop_toBottomOf="@id/select_character_recycler" />

    <TextView
        android:id="@+id/character_select_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/character_picker_button_cancel"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/character_select_yes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_character_recycler" />

</androidx.constraintlayout.widget.ConstraintLayout>