<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_horizontal"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/select_sel_triumphs_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_triumphs"
        android:textAlignment="textEnd"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintWidth_percent=".45"
        app:layout_constrainedWidth="true"
        android:background="@android:color/darker_gray"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/select_sel_triumphs_tv"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/ts_triumphs_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ts_fragment"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/select_sel_triumphs_tv" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/triumphs_recycler"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:requiresFadingEdge="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ts_seals_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ts_triumphs_text">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/ts_seals_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ts_seals"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/seals_recycler" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/seals_recycler"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>