<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/equipped_layout"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#44A9A9A9">

        <RelativeLayout
            android:id="@+id/equipped_iconLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:background="@android:color/darker_gray"
            android:backgroundTintMode="src_over">

            <ImageView
                android:id="@+id/equipped_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                app:srcCompat="@mipmap/ic_launcher" />

        </RelativeLayout>

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/equipped_iconLayout"
            android:layout_margin="5dp"
            android:layout_toEndOf="@+id/equipped_iconLayout"
            android:text="@string/item_name"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/item_flavor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_name"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="15dp"
            android:layout_toEndOf="@id/equipped_iconLayout"
            android:text="@string/item_type"
            android:textColor="@android:color/white" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/equipped_iconLayout"
            android:layout_alignBottom="@+id/equipped_iconLayout">


            <ImageView
                android:id="@+id/item_element"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignTop="@+id/item_power"
                android:layout_alignBottom="@+id/item_power"
                android:layout_toStartOf="@id/item_power"
                android:background="#99A9A9A9"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@android:drawable/btn_radio" />

            <TextView
                android:id="@+id/item_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:paddingEnd="5dp"
                android:text="@string/item_power"
                android:textAlignment="textEnd"
                android:background="#99A9A9A9"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

        </RelativeLayout>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/character_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/equipped_layout"
        android:fadeScrollbars="true"
        android:scrollbars="vertical" />

</RelativeLayout>