<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pursuits_fragment_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="end">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintWidth_percent=".48"
            android:layout_marginEnd="20dp"
            app:layout_constrainedWidth="true"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toTopOf="@id/select_sel_pursuits_tv"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/select_sel_pursuits_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingEnd="20dp"
            android:text="@string/pursuits_fragment"
            android:textAlignment="textEnd"
            android:textAllCaps="true"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintWidth_percent=".48"
            app:layout_constrainedWidth="true"
            android:background="@android:color/darker_gray"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/select_sel_pursuits_tv"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tracked_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/pursuit_tracked"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_sel_pursuits_tv" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constrainedWidth="true"
            android:background="@android:color/darker_gray"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/tracked_title"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tracked_pursuit"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tracked_title">

                <ViewStub
                    android:id="@+id/viewStub"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout="@layout/quest_item_layout" />

                <TextView
                    android:id="@+id/no_tracked_items"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_tracked_pursuit"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/pursuit_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/pursuit_list"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tracked_pursuit" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constrainedWidth="true"
            android:background="@android:color/darker_gray"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/pursuit_list"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pursuits_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            app:layout_constrainedHeight="true"
            android:layout_marginTop="50dp"
            android:requiresFadingEdge="vertical"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/tracked_pursuit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>